--- a/pom.xml
+++ b/pom.xml
@@ -45,9 +45,9 @@
       <type>jar</type>
     </dependency>
     <dependency>
-      <groupId>com.sk89q</groupId>
-      <artifactId>worldedit</artifactId>
-      <version>5.5.9-SNAPSHOT</version>
+      <groupId>com.sk89q.worldedit</groupId>
+      <artifactId>worldedit-core</artifactId>
+      <version>6.1.1-SNAPSHOT</version>
     </dependency>
     <dependency>
       <groupId>com.zachsthings.libcomponents</groupId>
